# redqueue

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  README-zh-CN.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: API.md  RELEASE.md
docs/superpowers/plans/: 2026-06-27-message-deduplication.md
docs/superpowers/specs/: 2026-06-27-message-deduplication-design.md
examples/: README.md  __init__.py  async_list_queue.py  common.py  compatibility_check.py  custom_serializer.py  delayed_tasks.py  monitoring_hooks.py  stream_queue.py  sync_list_queue.py
scripts/: check.py
src/redqueue/: __init__.py  __main__.py  _version.py  async_client.py  cli.py  client.py  compat.py  config.py  connection.py  deduplication.py  exceptions.py  message.py  monitoring.py  serialization.py
src/redqueue/backends/: __init__.py  async_delay.py  async_list.py  async_stream.py  base.py  delay.py  list.py  stream.py
tests/: README.md  __init__.py  fakes.py  test_availability.py  test_backend_contracts.py  test_cli.py  test_integration_redis.py  test_performance.py  test_project_skeleton.py  test_real_redis_availability.py  test_real_redis_performance.py
